alternatecalendar: Add abstract calendar provider class
This base class will be used in alternate calendar provider
implementations.

CCBUG: 429892

--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -4,6 +4,7 @@
 
 set(alternatecalendar_LIB_SRCS
     alternatecalendarplugin.cpp
+    provider/abstractcalendarprovider.cpp
 )
 
 set(alternatecalendar_LINK_LIBRARIES
