alternatecalendar: Add QCalendar provider
This implements calendar system supports from QCalendar.

CCBUG: 429892

--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -5,6 +5,7 @@
 set(alternatecalendar_LIB_SRCS
     alternatecalendarplugin.cpp
     provider/abstractcalendarprovider.cpp
+    provider/qtcalendar.cpp
 )
 
 set(alternatecalendar_LINK_LIBRARIES
