alternatecalendar: Implement config backend
This provides a config backend and a model contaning all the available
calendar systems that can be used in a combobox.

CCBUG: 429892

--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -27,3 +27,5 @@ configure_file(config-ICU.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-ICU.h)
 
 kcoreaddons_add_plugin(alternatecalendar SOURCES ${alternatecalendar_LIB_SRCS} INSTALL_NAMESPACE "plasmacalendarplugins")
 target_link_libraries(alternatecalendar ${alternatecalendar_LINK_LIBRARIES})
+
+add_subdirectory(config)
