alternatecalendar: Add Chinese lunar calendar system support
The traditional Chinese calendar (also known as the Agricultural
Calendar is a lunisolar calendar which identifies years, months,
and days according to astronomical phenomena. In China, it is defined
by the Chinese national standard GB/T 33661–2017, "Calculation and
Promulgation of the Chinese Calendar", issued by the Standardization
Administration of China on May 12, 2017.

The plugin is adapted from https://github.com/BLumia/pineapple-calendar

Co-authored-by: Gary Wang <wzc782970009@gmail.com>

FEATURE: 429892
FIXED-IN: 5.26

--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -24,6 +24,7 @@ if(ICU_FOUND)
     set(alternatecalendar_LIB_SRCS
         ${alternatecalendar_LIB_SRCS}
         provider/icucalendar_p.cpp
+        provider/chinesecalendar.cpp
     )
     set(alternatecalendar_LINK_LIBRARIES
         ${alternatecalendar_LINK_LIBRARIES}
