alternatecalendar: Add Indian national calendar system support
The Indian national calendar, sometimes called the Saka calendar, is
used, alongside the Gregorian calendar, by The Gazette of India, in
news broadcasts by All India Radio and in calendars and communications
issued by the Government of India.

CCBUG: 429892

--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -25,6 +25,7 @@ if(ICU_FOUND)
         ${alternatecalendar_LIB_SRCS}
         provider/icucalendar_p.cpp
         provider/chinesecalendar.cpp
+        provider/indiancalendar.cpp
     )
     set(alternatecalendar_LINK_LIBRARIES
         ${alternatecalendar_LINK_LIBRARIES}
