Port konsoleprofiles applet away from Dataengines
Task: https://phabricator.kde.org/T13321

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,8 +89,8 @@ ecm_set_disabled_deprecation_versions(
 )
 
 add_subdirectory(dict)
+add_subdirectory(profiles)
 add_subdirectory(applets)
-add_subdirectory(dataengines)
 add_subdirectory(runners)
 
 add_subdirectory(wallpapers)
