Copy kate sessions applet from kate repo
With this being located next to the KRunner plugin and Konsole plugin/applet,
we can more easily share the code.

--- a/applets/CMakeLists.txt
+++ b/applets/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(timer)
 add_subdirectory(userswitcher)
 add_subdirectory(weather)
 add_subdirectory(webbrowser)
+add_subdirectory(katesessions)
