--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -13,14 +13,7 @@ set(alternatecalendar_LINK_LIBRARIES
     KF5::CalendarEvents
 )
 
-find_package(ICU 66.1 COMPONENTS uc i18n)
-set_package_properties(ICU
-        PROPERTIES DESCRIPTION "Unicode and Globalization support for software applications"
-        TYPE OPTIONAL
-        PURPOSE "Provides alternate calendar systems that are not available in QCalendar"
-        )
-if(ICU_FOUND)
-    set(HAVE_ICU TRUE)
+if(${HAVE_ICU})
     set(alternatecalendar_LIB_SRCS
         ${alternatecalendar_LIB_SRCS}
         provider/icucalendar_p.cpp
