windowswitchers/CMakeLists.txt: Move install path to variable, cleanup KWIN_NAME variable
In KWin, the packagestructures install path is not dependant on the KWIN_NAME, consequently
having this as a CMake variable in kdeplasma-addons makes no sense.
To de-duplicate the install paths, a CMake variable was added.

--- a/windowswitchers/CMakeLists.txt
+++ b/windowswitchers/CMakeLists.txt
@@ -1,15 +1,15 @@
 # packages
-set(KWIN_NAME "kwin")
-install( DIRECTORY big_icons    DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY compact      DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY coverswitch  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY flipswitch   DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY informative  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY present_windows  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY small_icons  DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY text         DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY thumbnail_grid   DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
-install( DIRECTORY thumbnails   DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox )
+set(TABBOX_DIR ${KDE_INSTALL_DATADIR}/kwin/tabbox)
+install(DIRECTORY big_icons    DESTINATION  ${TABBOX_DIR})
+install(DIRECTORY compact      DESTINATION ${TABBOX_DIR})
+install(DIRECTORY coverswitch  DESTINATION ${TABBOX_DIR})
+install(DIRECTORY flipswitch   DESTINATION ${TABBOX_DIR})
+install(DIRECTORY informative  DESTINATION ${TABBOX_DIR})
+install(DIRECTORY present_windows  DESTINATION ${TABBOX_DIR})
+install(DIRECTORY small_icons  DESTINATION ${TABBOX_DIR})
+install(DIRECTORY text         DESTINATION ${TABBOX_DIR})
+install(DIRECTORY thumbnail_grid   DESTINATION ${TABBOX_DIR})
+install(DIRECTORY thumbnails   DESTINATION ${TABBOX_DIR})
 
-install (FILES IconTabBox.qml DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox/big_icons/contents/ui)
-install (FILES IconTabBox.qml DESTINATION ${KDE_INSTALL_DATADIR}/${KWIN_NAME}/tabbox/small_icons/contents/ui)
+install(FILES IconTabBox.qml DESTINATION ${TABBOX_DIR}/big_icons/contents/ui)
+install(FILES IconTabBox.qml DESTINATION ${TABBOX_DIR}/small_icons/contents/ui)
