Drop no longer necessary KF5WindowSystem dependency
e03b5939c17454cded7df90b6bc2d50e2005e2b6 Unified the methods to pick
a color on Wayland and X11 and there are no longer any calls to
KWindowSystem::isPlatform{Wayland,X11}, which were the reason for
the KF5WindowSystem dependency AFAICT.

(cherry picked from commit f816ea1089cdc481b3396a60d4cb8a6761eecda6)

--- a/applets/colorpicker/CMakeLists.txt
+++ b/applets/colorpicker/CMakeLists.txt
@@ -8,5 +8,5 @@ set(colorpickerplugin_SRCS
 install(FILES plugin/qmldir DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/colorpicker)
 add_library(colorpickerplugin SHARED ${colorpickerplugin_SRCS})
 
-target_link_libraries(colorpickerplugin Qt::DBus Qt::Gui Qt::Qml Qt::Widgets KF5::WindowSystem)
+target_link_libraries(colorpickerplugin Qt::DBus Qt::Gui Qt::Qml Qt::Widgets)
 install(TARGETS colorpickerplugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/colorpicker)
