Request passing unit tests on Linux and BSD

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -31,3 +31,5 @@ Dependencies:
     'frameworks/sonnet': '@latest'
     'frameworks/unitconversion': '@latest'
     'plasma/plasma-workspace': '@same'
+Options:
+  require-passing-tests-on: [ 'Linux', 'FreeBSD']
