wallpapers/potd: add option to disable updating over metered connection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,16 @@ find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS
     NewStuff
 )
 
+find_package(KF5NetworkManagerQt CONFIG QUIET)
+set_package_properties(KF5NetworkManagerQt PROPERTIES
+    DESCRIPTION "Qt wrapper for NetworkManager API"
+    PURPOSE "Disable wallpaper update when using metered connections"
+    TYPE OPTIONAL
+)
+if(KF5NetworkManagerQt_FOUND)
+    set(HAVE_NetworkManagerQt TRUE)
+endif()
+
 find_package(KF5Purpose CONFIG QUIET)
 set_package_properties(KF5Purpose PROPERTIES
     DESCRIPTION "Framework for cross-application services and actions"
