Ignore "templates" folder for cppcheck CI
The contens is not valid C++ and thus we would only get false positives

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -32,3 +32,4 @@ Dependencies:
     'plasma/plasma-workspace': '@same'
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD']
+  cppcheck-ignore-files: ['templates/']
