--- a/dict/CMakeLists.txt
+++ b/dict/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(engine_dict_static STATIC dictengine.cpp)
+set_property(TARGET engine_dict_static PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_compile_definitions(engine_dict_static PRIVATE -DTRANSLATION_DOMAIN="plasma_addons_engine_dict")
 
 target_link_libraries (engine_dict_static
