--- a/runners/spellchecker/CMakeLists.txt
+++ b/runners/spellchecker/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(krunner_spellcheck
 )
 
 kcoreaddons_add_plugin(kcm_krunner_spellcheck INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner/kcms")
+target_compile_definitions(kcm_krunner_spellcheck PRIVATE -DKRUNNER_PLUGIN_NAME="krunner_spellcheck")
 ki18n_wrap_ui(kcm_krunner_spellcheck spellcheck_config.ui)
 target_sources(kcm_krunner_spellcheck PRIVATE spellcheck_config.cpp)
 target_link_libraries(kcm_krunner_spellcheck 
