appium test for calculator widget
this introduces new testing tech previously mentioned on plasma-devel.
it is based on selenium (and its extension appium) to provide GUI
testing through the accessibility API AT-SPI

this initial test does some simple calculations on the calculator widget

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -29,6 +29,9 @@ Dependencies:
     'frameworks/sonnet': '@latest'
     'frameworks/kunitconversion': '@latest'
     'plasma/plasma-workspace': '@same'
+- 'on': ['Linux']
+  'require':
+    'sdk/selenium-webdriver-at-spi': '@latest'
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD']
   cppcheck-ignore-files: ['templates/']
