--- a/runners/datetime/CMakeLists.txt
+++ b/runners/datetime/CMakeLists.txt
@@ -1,8 +1,12 @@
 add_definitions(-DTRANSLATION_DOMAIN="plasma_runner_datetime")
 
-kcoreaddons_add_plugin(krunner_datetime SOURCES datetimerunner.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
-target_link_libraries(krunner_datetime
+kcoreaddons_add_plugin(org.kde.datetime SOURCES datetimerunner.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+target_link_libraries(org.kde.datetime
     KF5::Runner
     KF5::KIOWidgets
     KF5::I18n
 )
+
+if(BUILD_TESTING)
+add_subdirectory(autotests)
+endif()
