alternatecalendar: add support for Hebrew/Jewish calendar
The Hebrew calendar, also called the Jewish calendar, is a lunisolar
calendar used today for Jewish religious observance, and as an
official calendar of the state of Israel. It determines the dates for
Jewish holidays and the appropriate public reading of Torah portions,
yahrzeits (dates to commemorate the death of a relative), and daily
Psalm readings, among many ceremonial uses. In Israel, it is used for
religious purposes, provides a time frame for agriculture, and is an
official calendar for civil holidays, alongside the Gregorian calendar.

FEATURE: 463869
FIXED-IN: 5.27

--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -20,6 +20,7 @@ if(${HAVE_ICU})
         ${alternatecalendar_LIB_SRCS}
         provider/icucalendar_p.cpp
         provider/chinesecalendar.cpp
+        provider/hebrewcalendar.cpp
         provider/indiancalendar.cpp
     )
     set(alternatecalendar_LINK_LIBRARIES
