--- a/wallpapers/CMakeLists.txt
+++ b/wallpapers/CMakeLists.txt
@@ -1,3 +1,4 @@
 plasma_install_package(haenau org.kde.haenau wallpapers wallpaper)
 plasma_install_package(hunyango org.kde.hunyango wallpapers wallpaper)
 add_subdirectory(potd)
+add_subdirectory(autotests)
