wallpapers/potd: port away from deprecated API, simplify engine
Main changes:

1. Remove QImage in PotdProvider, use local path instead.
2. Add more virtual functions in PotdProvider
3. Move Flickr specific code to FlickrProvider

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 include(ECMQtDeclareLoggingCategory)
+include(ECMGenerateExportHeader)
 include(ECMInstallIcons)
 include(KDEPackageAppTemplates)
 include(GenerateExportHeader)
