wallpapers/potd: use categorized logging in providers

--- a/wallpapers/potd/plugins/providers/CMakeLists.txt
+++ b/wallpapers/potd/plugins/providers/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 kcoreaddons_add_plugin(plasma_potd_flickrprovider SOURCES flickrprovider.cpp INSTALL_NAMESPACE "potd")
-target_link_libraries(plasma_potd_flickrprovider plasmapotdprovidercore KF5::KIOCore KF5::CoreAddons)
+target_link_libraries(plasma_potd_flickrprovider plasmapotdprovidercore plasma_wallpaper_potdplugin_debug KF5::KIOCore KF5::CoreAddons)
 
 kcoreaddons_add_plugin(plasma_potd_apodprovider SOURCES apodprovider.cpp INSTALL_NAMESPACE "potd")
 target_link_libraries(plasma_potd_apodprovider plasmapotdprovidercore KF5::KIOCore)
@@ -13,7 +13,7 @@ kcoreaddons_add_plugin(plasma_potd_epodprovider SOURCES epodprovider.cpp INSTALL
 target_link_libraries(plasma_potd_epodprovider plasmapotdprovidercore KF5::KIOCore)
 
 kcoreaddons_add_plugin(plasma_potd_noaaprovider SOURCES noaaprovider.cpp INSTALL_NAMESPACE "potd")
-target_link_libraries(plasma_potd_noaaprovider plasmapotdprovidercore KF5::KIOCore)
+target_link_libraries(plasma_potd_noaaprovider plasmapotdprovidercore plasma_wallpaper_potdplugin_debug KF5::KIOCore)
 
 kcoreaddons_add_plugin(plasma_potd_wcpotdprovider SOURCES wcpotdprovider.cpp INSTALL_NAMESPACE "potd")
 target_link_libraries(plasma_potd_wcpotdprovider plasmapotdprovidercore KF5::KIOCore)
