applets/comic: Only link against NewStuffCore, make KXmlGui dependency explicit
In KF6, KXmlGui will no longer be linked PUBLIC and the ::NewStuff target will no longer exist.
For this case, KNSCore is enough anyway, because we do not need the widget classes.

--- a/applets/comic/CMakeLists.txt
+++ b/applets/comic/CMakeLists.txt
@@ -23,8 +23,9 @@ target_link_libraries(org.kde.plasma.comic
                       KF5::I18n
                       KF5::KIOCore
                       KF5::KIOWidgets
-                      KF5::NewStuff
+                      KF5::NewStuffCore
                       KF5::Notifications
+                      KF5::XmlGui
                       plasma_engine_comic)
 
 install(FILES comic.knsrc DESTINATION ${KDE_INSTALL_KNSRCDIR})
