Use krunner_configure_test function instead of configure_krunner_test
The latter is removed in KF6

--- a/runners/datetime/autotests/CMakeLists.txt
+++ b/runners/datetime/autotests/CMakeLists.txt
@@ -3,4 +3,4 @@
 include(ECMAddTests)
 
 ecm_add_test(datetimerunnertest.cpp TEST_NAME datetimerunnertest LINK_LIBRARIES Qt::Test KF5::Runner)
-configure_krunner_test(datetimerunnertest org.kde.datetime)
+krunner_configure_test(datetimerunnertest org.kde.datetime)
