--- a/applets/webbrowser/CMakeLists.txt
+++ b/applets/webbrowser/CMakeLists.txt
@@ -1,12 +1,12 @@
-find_package(Qt5WebEngine ${QT_MIN_VERSION} CONFIG)
+find_package(Qt6WebEngineQuick ${QT_MIN_VERSION} CONFIG)
 
-set_package_properties(Qt5WebEngine PROPERTIES
+set_package_properties(Qt6WebEngine PROPERTIES
     PURPOSE "Needed by the web browser applet"
     URL "https://doc.qt.io/qt-5/qtwebengine-index.html"
     TYPE OPTIONAL
 )
 
-if (Qt5WebEngine_FOUND)
+if (Qt6WebEngineQuick_FOUND)
 
 plasma_install_package(package org.kde.plasma.webbrowser)
 
