--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -4,34 +4,34 @@
 Dependencies:
 - 'on': ['@all']
   'require':
-    'frameworks/attica': '@latest'
-    'frameworks/extra-cmake-modules': '@latest'
-    'frameworks/kauth': '@latest'
-    'frameworks/kcmutils': '@latest'
-    'frameworks/kcodecs': '@latest'
-    'frameworks/kcompletion': '@latest'
-    'frameworks/kconfig': '@latest'
-    'frameworks/kconfigwidgets': '@latest'
-    'frameworks/kcoreaddons': '@latest'
-    'frameworks/kholidays': '@latest'
-    'frameworks/ki18n': '@latest'
-    'frameworks/kio': '@latest'
-    'frameworks/kjobwidgets': '@latest'
-    'frameworks/knewstuff': '@latest'
-    'frameworks/knotifications': '@latest'
-    'frameworks/kpackage': '@latest'
-    'frameworks/krunner': '@latest'
-    'frameworks/kservice': '@latest'
-    'frameworks/kwidgetsaddons': '@latest'
-    'frameworks/kxmlgui': '@latest'
-    'frameworks/plasma-framework': '@latest'
-    'frameworks/solid': '@latest'
-    'frameworks/sonnet': '@latest'
-    'frameworks/kunitconversion': '@latest'
+    'frameworks/attica': '@latest-kf6'
+    'frameworks/extra-cmake-modules': '@latest-kf6'
+    'frameworks/kauth': '@latest-kf6'
+    'frameworks/kcmutils': '@latest-kf6'
+    'frameworks/kcodecs': '@latest-kf6'
+    'frameworks/kcompletion': '@latest-kf6'
+    'frameworks/kconfig': '@latest-kf6'
+    'frameworks/kconfigwidgets': '@latest-kf6'
+    'frameworks/kcoreaddons': '@latest-kf6'
+    'frameworks/kholidays': '@latest-kf6'
+    'frameworks/ki18n': '@latest-kf6'
+    'frameworks/kio': '@latest-kf6'
+    'frameworks/kjobwidgets': '@latest-kf6'
+    'frameworks/knewstuff': '@latest-kf6'
+    'frameworks/knotifications': '@latest-kf6'
+    'frameworks/kpackage': '@latest-kf6'
+    'frameworks/krunner': '@latest-kf6'
+    'frameworks/kservice': '@latest-kf6'
+    'frameworks/kwidgetsaddons': '@latest-kf6'
+    'frameworks/kxmlgui': '@latest-kf6'
+    'frameworks/plasma-framework': '@latest-kf6'
+    'frameworks/solid': '@latest-kf6'
+    'frameworks/sonnet': '@latest-kf6'
+    'frameworks/kunitconversion': '@latest-kf6'
     'plasma/plasma-workspace': '@same'
 - 'on': ['Linux']
   'require':
-    'sdk/selenium-webdriver-at-spi': '@latest'
+    'sdk/selenium-webdriver-at-spi': '@latest-kf6'
 Options:
   require-passing-tests-on: [ 'Linux', 'FreeBSD']
   cppcheck-ignore-files: ['templates/']
