applets: Port more applets to plasma5support
It appears like some applets have been overlooked in
8476cfb20534c95ad74a1748a4b738a3b66f7c5f. Not sure why build passes in
CI, but not on my laptop.

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -29,6 +29,7 @@ Dependencies:
     'frameworks/sonnet': '@latest-kf6'
     'frameworks/kunitconversion': '@latest-kf6'
     'plasma/plasma-workspace': '@same'
+    'plasma/plasma5support': '@same'
 - 'on': ['Linux']
   'require':
     'sdk/selenium-webdriver-at-spi': '@latest-kf6'
