kcms/timer: Port away from deprecated notifications DataEngine
Use the KNotification API instead.

It registers into the API by installing `plasma_applet_timer.notifyrc`
file to /usr/share/knotifications6/.

--- a/applets/timer/CMakeLists.txt
+++ b/applets/timer/CMakeLists.txt
@@ -8,3 +8,4 @@ ecm_finalize_qml_module(timerplugin DESTINATION ${KDE_INSTALL_QMLDIR})
 install(FILES timer.svgz
 	DESTINATION ${PLASMA_DATA_INSTALL_DIR}/desktoptheme/default/widgets/)
 
+install(FILES plasma_applet_timer.notifyrc  DESTINATION ${KDE_INSTALL_KNOTIFYRCDIR})
